Sun Sep 14 16:53:09 CDT 2003 Adam Heath <doogie@debian.org>

  * scripts/update-alternatives.{pl,8}:
    * Apply patch that provides --set and --remove-all commands.
    * --all calls --config on all alternatives.
  * scripts/update-alternatives.pl:
    * Alter --config prompt, to be more clear, that one must 'press' enter
      to accept the default.
    * Fix some -w issues.
    * Check whether the target path exists when removing.

Sat Sep 13 20:48:02 CDT 2003 Adam Heath <doogie@debian.org>

  * scripts/update-alternatives.8: Add --config to action section, and add
    as EXAMPLES section.
  * scripts/install-info.pl: install-info --version and --help now display
    on stdout.
  * main/dpkg{,-query}.8: Mention what -S will not find.
  * main/dpkg.8: Mention that downgrading a package can have serious
    consequences.
  * scripts/dpkg-scanpackages.8: Include small note that other tools might
    use the generated Packages file.
  * scripts/dpkg-source.1: Fix some typos.
  * dselect/dselect.8: dselect is not the only interface for installing
    packages nowadays.
  * utils/start-stop-daemon.8: Note that --nicelevel takes an argument.
  * man/en/deb-control.8: Remove duplicate 'can'.
  * scripts/dpkg-scansources.pl: Fix short description.
  * main/dpkg.8: Move dpkg-query options to their own subsection, like
    dpkg-deb.
  * main/main.c, main/dpkg.8: Add --dry-run and --simulate as synonyms to
    --no-act.
  * scripts/dpkg-architecture.pl: Fix wrong reference to
    DEB_BUILD_GNU_SYSTEM on --host
  * man/en/deb-control.5: s/Usuaully/Usually/
  * dselect/dselect.8: Removed reference in dselect(8) about recommends not
    being handled well.
  * scripts/dpkg-parsechangelog.pl: s/dpkg-source/dpkg-parsechangelog/ in
    -h
  * scripts/dpkg-source.1: Unhighlight "May be repeated multiple times."
  * dpkg-deb/main.c: Make all actions in -h lower case.
  * utils/start-stop-daemon.[c8]: Add -g|--group.
  * main/dpkg.8: s/THANKS/THANKS.gz/