@@ -1,4 +1,2 @@
 Makefile
-helpmsgs.cc
-helpmsgs.h
 curkeys.h
