@@ -1,0 +1,21 @@
+/*
+ * WARNING - THIS FILE IS GENERATED AUTOMATICALLY - DO NOT EDIT
+ * It is generated by mkhelpmsgs.pl from helpmsgs.src.
+ */
+
+#ifndef HELPMSGS_H
+#define HELPMSGS_H
+extern "C" {
+#include <config.h>
+#include <dpkg.h>
+}
+struct helpmessage { const char *title; const char *text; };
+extern const struct helpmessage hlp_listkeys;
+extern const struct helpmessage hlp_mainintro;
+extern const struct helpmessage hlp_readonlyintro;
+extern const struct helpmessage hlp_recurintro;
+extern const struct helpmessage hlp_displayexplain1;
+extern const struct helpmessage hlp_displayexplain2;
+extern const struct helpmessage hlp_methintro;
+extern const struct helpmessage hlp_methkeys;
+#endif /* HELPMSGS_H */
