@@ -1,181 +1,0 @@
-@@@ listkeys Keystrokes
-
-Motion keys: Next/Previous, Top/End, Up/Down, Backwards/Forwards:
-  n, Down-arrow, j      p, Up-arrow, k          move highlight
-  N, Page-down, Space   P, Page-up, Backspace   scroll list by 1 page
-  ^n                    ^p                      scroll list by 1 line
-  t, Home               e, End                  jump to top/end of list
-  u                     d                       scroll info by 1 page
-  ^u                    ^d                      scroll info by 1 line
-  B, Left-arrow         F, Right-arrow          pan display by 1/3 screen
-  ^b                    ^f                      pan display by 1 character
-
-Mark packages for later processing:
- +, Insert  install or upgrade      =, H  hold in present state
- -, Delete  remove                  :, G  unhold: upgrade or leave uninstalled
- _          remove & purge config
-                                             Miscellaneous:
-Quit, exit, overwrite (note capitals!):       ?, F1 request help (also Help)
- Return  Confirm, quit (check dependencies)   i, I  toggle/cycle info displays
-   Q     Confirm, quit (override dep.s)       o, O  cycle through sort options
- X, Esc  eXit, abandoning any changes made    v, V  change status display opts
-   R     Revert to state before this list      ^l   redraw display
-   U     set all to sUggested state             /   search (Return to cancel)
-   D     set all to Directly requested state    \\   repeat last search
-
-@@@ mainintro Introduction to package selections
-
-Welcome to dselect's main package listing.
-
-You will be presented with a list of packages which are installed or available
-for installation.  You can navigate around the list using the cursor keys,
-mark packages for installation (using `+') or deinstallation (using `-').
-Packages can be marked either singly or in groups; initially you will see that
-the line `All packages' is selected.  `+', `-' and so on will affect all the
-packages described by the highlighted line.
-
-Some of your choices will cause conflicts or dependency problems; you will be
-given a sub-list of the relevant packages, so that you can solve the problems.
-
-You should read the list of keys and the explanations of the display.
-Much on-line help is available, please make use of it - press `?' at
-any time for help.
-
-When you have finished selecting packages, press <enter> to confirm changes,
-or `Q' to quit without saving changes. A final check on conflicts and
-dependencies will be done - here too you may see a sublist.
-
-Press <enter> to leave help and enter the list now.
-
-@@@ readonlyintro Introduction to read-only package list browser
-
-Welcome to dselect's main package listing.
-
-You will be presented with a list of packages which are installed or available
-for installation.  Since you do not have the privilege necessary to update
-package states, you are in a read-only mode.  You can navigate around the
-list using the cursor keys (please see the `Keystrokes' help screen), observe
-the status of the packages and read information about them.
-
-You should read the list of keys and the explanations of the display.
-Much on-line help is available, please make use of it - press `?' at
-any time for help.
-
-When you have finished browsing, press `Q' or <enter> to quit.
-
-Press <enter> to leave help and enter the list now.
-
-@@@ recurintro Introduction to conflict/dependency resolution sub-list
-
-Dependency/conflict resolution - introduction.
-
-One or more of your choices have raised a conflict or dependency problem -
-some packages should only be installed in conjunction with certain others, and
-some combinations of packages may not be installed together.
-
-You will see a sub-list containing the packages involved.  The bottom half of
-the display shows relevant conflicts and dependencies; use `i' to cycle between
-that, the package descriptions and the internal control information.
-
-A set of `suggested' packages has been calculated, and the initial markings in
-this sub-list have been set to match those, so you can just hit Return to
-accept the suggestions if you wish.  You may abort the change(s) which caused
-the problem(s), and go back to the main list, by pressing capital `X'.
-
-You can also move around the list and change the markings so that they are more
-like what you want, and you can `reject' my suggestions by using the capital
-`D' or `R' keys (see the keybindings help screen).  You can use capital `Q' to
-force me to accept the situation currently displayed, in case you want to
-override a recommendation or think that the program is mistaken.
-
-Press <enter> to leave help and enter the sub-list; remember: press `?' for help.
-
-@@@ displayexplain1 Display, part 1: package listing and status chars
-
-The top half of the screen shows a list of packages.  For each package you see
-four columns for its current status on the system and mark.  In terse mode (use
-`v' to toggle verbose display) these are single characters, from left to right:
-
- Error flag: Space - no error (but package may be in broken state - see below)
-              `R'  - serious error during installation, needs reinstallation;
- Installed state:   Space - not installed;
-                     `*'  - installed;
-                     `-'  - not installed but config files remain;
-       packages in { `U'  - unpacked but not yet configured;
-      these states { `C'  - half-configured (an error happened);
-        are broken { `I'  - half-installed (an error happened).
- Old mark: what was requested for this package before presenting this list;
- Mark: what is requested for this package:
-  `*': marked for installation or upgrade;
-  `-': marked for removal, but any configuration files will remain;
-  `=': on hold: package will not be processed at all;
-  `_': marked for purge completely - even remove configuration;
-  `n': package is new and has yet to be marked for install/remove/&c.
-
-Also displayed are each package's Priority, Section, name, installed and
-available version numbers (shift-V to display/hide) and summary description.
-
-@@@ displayexplain2 Display, part 2: list highlight; information display
-
-* Highlight: One line in the package list will be highlighted.  It indicates
-  which package(s) will be affected by presses of `+', `-' and `_'.
-
-* The dividing line in the middle of the screen shows a brief explanation of
-  the status of the currently-highlighted package, or a description of which
-  group is highlighted if a group line is.  If you don't understand the
-  meaning of some of the status characters displayed, go to the relevant
-  package and look at this divider line, or use the `v' key for a verbose
-  display (press `v' again to go back to the terse display).
-
-* The bottom of the screen shows more information about the
-  currently-highlighted package (if there is only one).
-
-  It can show an extended description of the package, the internal package
-  control details (either for the installed or available version of the
-  package), or information about conflicts and dependencies involving the
-  current package (in conflict/dependency resolution sublists).
-
-  Use the `i' key to cycle through the displays, and `I' to hide the
-  information display or expand it to use almost all of the screen.
-
-@@@ methintro Introduction to method selection display
-
-dselect and dpkg can do automatic installation, loading the package files to be
-installed from one of a number of different possible places.
-
-This list allows you to select one of these installation methods.
-
-Move the highlight to the method you wish to use, and hit Enter.  You will then
-be prompted for the information required to do the installation.
-
-As you move the highlight a description of each method, where available, is
-displayed in the bottom half of the screen.
-
-If you wish to quit without changing anything use the `x' key while in the list
-of installation methods.
-
-A full list of keystrokes is available by pressing `k' now, or from the help
-menu reachable by pressing `?'.
-
-@@@ methkeys Keystrokes for method selection
-
-Motion keys: Next/Previous, Top/End, Up/Down, Backwards/Forwards:
-  n, Down-arrow         p, Up-arrow             move highlight
-  N, Page-down, Space   P, Page-up, Backspace   scroll list by 1 page
-  ^n                    ^p                      scroll list by 1 line
-  t, Home               e, End                  jump to top/end of list
-  u                     d                       scroll info by 1 page
-  ^u                    ^d                      scroll info by 1 line
-  B, Left-arrow         F, Right-arrow          pan display by 1/3 screen
-  ^b                    ^f                      pan display by 1 character
-(These are the same motion keys as in the package list display.)
-
-Quit:
- Return, Enter    select this method and go to its configuration dialogue
- x, X             exit without changing or setting up the installation method
-
-Miscellaneous:
-  ?, Help, F1      request help
- ^l                redraw display
-  /                search (just return to cancel)
-  \\                repeat last search
