@@ -5,6 +5,7 @@ dpkg (1.10.11) unstable; urgency=low
     0.12.1-3.
   * Updated config.sub and config.guess in cvs.
   * Change use of strncpy in parsedb to memcpy.  Closes: #160447
+  * No longer generate helpmsgs.{cc,h}.
   * Frank Lichtenheld <frank@lichtenheld.de>:
     Apply patch, to handle missing infodir.bak, and empty files.  Closes:
     #196361
