@@ -1,3 +1,8 @@
+Sun Sep 14 17:24:20 CDT 2003 Adam Heath <doogie@debian.org>
+
+  * dselect/{Makefile.in,helpmsgs.{cc,h,src},mkhelpmsgs.pl,.cvsignore}:
+    No longer generate helpmsgs.{cc,h}.
+
 Sun Sep 14 16:53:09 CDT 2003 Adam Heath <doogie@debian.org>
 
   * scripts/update-alternatives.{pl,8}:
